// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Question Component > renders different question views based on the view prop 1`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__buttons buttons d-flex flex-wrap justify-content-center p-3 w-100"
    >
      <div
        aria-label="Button Array"
        class="btn-group-toggle-custom"
        data-toggle="buttons"
        role="group"
      >
        <label
          class="btn btn-secondary btn-lg"
          tabindex="0"
        >
          <input
            aria-checked="false"
            class="1"
            data-testid="toggle-button-1"
            id="0"
            type="radio"
            value="1"
          />
          One
        </label>
        <label
          class="btn btn-secondary btn-lg"
          tabindex="0"
        >
          <input
            aria-checked="false"
            class="2"
            data-testid="toggle-button-2"
            id="1"
            type="radio"
            value="2"
          />
          Two
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 2`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__checkboxes"
    >
      <div
        class="checkbox"
        tabindex="0"
      >
        <i />
        <span>
          One
        </span>
      </div>
      <div
        class="checkbox"
        tabindex="0"
      >
        <i />
        <span>
          Two
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 3`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__dropdown"
    >
      <select
        tabindex="0"
      >
        <option
          value=""
        />
        <option
          value="1"
        >
          One
        </option>
        <option
          value="2"
        >
          Two
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 4`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__autocomplete"
    >
      <div
        class="control"
      >
        <div
          class=" css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class=" css-13cymwt-control"
          >
            <div
              class=" css-1fdsijx-ValueContainer"
            >
              <div
                class=" css-1jqq78o-placeholder"
                id="react-select-2-placeholder"
              >
                Select...
              </div>
              <div
                class=" css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-2-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-2-input"
                  role="combobox"
                  spellcheck="false"
                  style="color: inherit; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline-color: initial; outline-style: initial; outline-width: 0px; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 5`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__radios"
    >
      <div
        class="radio"
        tabindex="0"
      >
        <i />
        <span>
          One
        </span>
      </div>
      <div
        class="radio"
        tabindex="0"
      >
        <i />
        <span>
          Two
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 6`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__range empty"
    >
      <h1
        class="current-value"
      >
        ↔
      </h1>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="NaN"
        class="rangeslider rangeslider-horizontal"
      >
        <div
          class="rangeslider__fill"
          style=""
        />
        <div
          class="rangeslider__handle"
          style=""
          tabindex="0"
        >
          <div
            class="rangeslider__handle-label"
          />
        </div>
        <ul
          class="rangeslider__labels"
        />
      </div>
      <div
        class="limits"
      >
        <span
          class="min"
        />
        <span
          class="max"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 7`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__text-range empty"
    >
      <div>
        <h4
          class="current-value"
          style="position: relative; left: 0%;"
        >
          <span
            class="fa-solid fa-arrows-left-right fa-2x"
          />
        </h4>
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="5"
        class="rangeslider rangeslider-horizontal"
      >
        <div
          class="rangeslider__fill"
          style="width: 0px;"
        />
        <div
          class="rangeslider__handle"
          style="left: 0px;"
          tabindex="0"
        >
          <div
            class="rangeslider__handle-label"
          />
        </div>
        <ul
          class="rangeslider__labels"
        />
      </div>
      <div
        class="limits"
      >
        <div>
          <span
            class="min"
          >
            One
          </span>
          <span
            class="max"
          >
            Two
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 8`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__text-range empty"
    >
      <div>
        <h4
          class="current-value"
          style="position: relative; left: -44%;"
        >
          <span
            class="fa-solid fa-arrows-left-right fa-2x"
          />
        </h4>
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rangeslider rangeslider-horizontal"
      >
        <div
          class="rangeslider__fill"
          style="width: 0px;"
        />
        <div
          class="rangeslider__handle"
          style="left: 0px;"
          tabindex="0"
        >
          <div
            class="rangeslider__handle-label"
          />
        </div>
        <ul
          class="rangeslider__labels"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Component > renders different question views based on the view prop 9`] = `
<div
  class="aha__question"
>
  <h3
    class=""
  >
    Test Question
  </h3>
  <div
    class="question"
  >
    <div
      class="aha__string"
    >
      <input
        value=""
      />
    </div>
  </div>
</div>
`;
